templates/b46/style.css
/* ... */
.alert.alert-secondary {
    color: #dc3545;/*red*/ }

figure {
  margin: 18px 0;
  margin: 1rem 0;
  display: block; }

.mfp-content figure {
  margin: 0; }
.mfp-figure figure {
  margin: 0;
  border: 0 none; }

nav ul, nav ol {
  list-style: none;
  margin: 0;
  padding: 0; }

html {
  scroll-behavior: smooth;
  background-color: #fcfcfc; }

body {
  background-color: #fcfcfc;
  padding-top: 2.675rem;
  color: #222; }

ins {
  background: #eee;
  text-decoration: none; }

del {
  color: #aaa; }

mark {
  background-color: #ccdee7; }

kbd {
  padding: 0 2.25px;
  padding: 0 .125rem;
  background: #eee;
  border: 1px solid #aaa; }

blockquote {
  margin: 18px 0;
  margin: 1rem 0; }
  blockquote p {
    quotes: '“' '”'; }
  blockquote p:before {
    content: '';
    content: no-open-quote; }
  blockquote p:after {
    content: '';
    content: no-close-quote; }
  blockquote p:first-of-type:before {
    content: '“';
    content: open-quote; }
  blockquote p:last-of-type:after {
    content: '”';
    content: close-quote; }
  :lang(de) blockquote p, blockquote:lang(de) p {
    quotes: '„' '“'; }
  :lang(de) blockquote p:before, blockquote:lang(de) p:before {
    content: '';
    content: no-open-quote; }
  :lang(de) blockquote p:after, blockquote:lang(de) p:after {
    content: '';
    content: no-close-quote; }
  :lang(de) blockquote p:first-of-type:before, blockquote:lang(de) p:first-of-type:before {
    content: '„';
    content: open-quote; }
  :lang(de) blockquote p:last-of-type:after, blockquote:lang(de) p:last-of-type:after {
    content: '“';
    content: close-quote; }
  blockquote > cite, blockquote > footer {
    display: block; }
    blockquote > cite:before, blockquote > footer:before {
      content: '– '; }
  blockquote cite {
    font-style: normal; }

summary {
  cursor: pointer; }

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none; }

table {
  width: 100%; }
  .post table, .page table {
    border-bottom: 1px solid #aaa; }
    .post table tr, .page table tr {
      border-top: 1px solid #aaa; }

.osans, .osans button, .osans input, .osans select, .osans optgroup, .osans textarea {
  font-family: 'Open Sans', sans-serif; }

.ssans, .ssans button, .ssans input, .ssans select, .ssans optgroup, .ssans textarea {
  font-family: 'Source Sans Pro', sans-serif; }

.rsans, .rsans button, .rsans input, .rsans select, .rsans optgroup, .rsans textarea {
  font-family: 'Roboto', sans-serif; }

.lsans, .lsans button, .lsans input, .lsans select, .lsans optgroup, .lsans textarea {
  font-family: 'Lato', sans-serif; }

.mserif, .mserif button, .mserif input, .mserif select, .mserif optgroup, .mserif textarea {
  font-family: 'Merriweather', serif; }

.dserif, .dserif button, .dserif input, .dserif select, .dserif optgroup, .dserif textarea {
  font-family: 'Droid Serif', serif; }

/* unsets */
#searchsend { display: none; }
.serendipity_entrypaging {
  display: none; }
  .serendipity_entrypaging .epicon {
    display: none;
    visibility: hidden; }
.serendipity_entrypaging.mobile {
  display: inline-block; }

/* ups-and-downs */
#to-top {
  top: 0;
  position: absolute; }
.nav-down {
  padding-right: .5rem; }
.sidebar-up {
  text-align: right; }
.col-lg-12 section.serendipity_plugin_upscroll.mb-3 {
  text-align: right;
  max-width: 100%;
  min-width: 100%; }

/* backend iframed messages, links or specific preview styles */
main.col-xs-12.col-lg-12 a,
main.col-xs-12.col-lg-12 .save_updertH {
  padding-left: .5em; }
main.col-xs-12.col-lg-12 .save_updertH hr {
  margin: .5em 0; }

/* extends the body top padding for non-blog (.post) headings */
.serendipity_Entry_Date h2, .page  h2,
.serendipity_Entry_Date h3, .page  h3 {
  display: inline-block; }

.container {
  padding-top: 1rem; }

.bi.bi-grip-horizontal {
  display: none; }

/* sidebars start */
@media only screen and (min-width: 480px) {
  /* flexing the bottom sidebar item */
  aside > section {
    display: inline-table; }
    .col-lg-12 section {
      min-width: 12rem;
      max-width: 23.75%;
      margin-right: 1.5rem; }
    .col-lg-12 section:last-of-type {
      margin-right: 0; }
    /* possible archives right next to calendar - sits too close ~521px */
    .serendipity_plugin_archives.mb-3 {
      margin-left: 1rem; }
}
@media only screen and (min-width: 560px) {
  .col-lg-12 section {
    min-width: 8.5rem;
    max-width: 40%; }
    /* assuming not all sidebar section items do need a full 40% width */
}
@media only screen and (min-width: 992px) {
  .container {
    padding-top: initial; }
  .serendipity_entrypaging {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 1rem 0;
    width: 100%; }
  .serendipity_entrypaging_left, .serendipity_entrypaging_right {
    width: 50%;
    white-space: nowrap; }
  .serendipity_entrypaging_left a.btn.btn-secondary, .serendipity_entrypaging_right a.btn.btn-secondary {
    width: auto;
    max-width: 98%;
    overflow: hidden;
    text-overflow: ellipsis; }
  .serendipity_entrypaging_left a.btn.btn-secondary {
    text-align: start; }
  .serendipity_entrypaging_right a.btn.btn-secondary {
    text-align: end; }
  aside > section {
    display: inline-grid; }
  aside.col-lg-12 {
    display: -webkit-box;
    display: block;
    background-color: #343a40;
    color: #b0b0b0; }
    aside.col-lg-12 section {
      min-width: 15em;
      max-width: 35em; }
    aside.col-lg-12 a, .col-lg-12 .bi.bi-rss-fill {
      color: #e5e5e5; }
    aside.sidebar_content #searchform {
      padding: initial; }
    aside.col-lg-12 section:last-of-type {
      margin-right: 0; }
  .bi.bi-grip-horizontal {
    display: initial; }
}
@media only screen and (min-width: 1440px) {
  .col-lg-12 section {
    margin-right: 2rem; }
}
/* sidebars end */

ul.pagination {
  padding: 1.5rem 0; }

.page-item.info {
  padding: .5rem 1rem; }

.bi.bi-rss-fill {
  vertical-align: text-bottom; }
/* ... */

